# C-sandbox-gtest

./: .clang-format  .gitignore  Makefile  README.md
.github/workflows/: run_tests.yml
src/: main.c  my_sorts.c  my_sorts.h
src/integers/: add.c
src/strings/: ft_strcpy.c  strings.h
test/: CMakeLists.txt  fetch_gtest.cmake  install_gtest.cmake
test/Integers/: CMakeLists.txt  addition.cpp
test/src/: test.cpp
